# OSBot-GSuite

./: README.md  buildspec.yml  gh-push-to-main.sh  pyproject.toml  requirements.txt  run-tests.sh  setup.py
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
_to_delete/: pip_update.sh  setup.py
deploy/: test_Deploy_Lambda_Functions.py  test_Update_Lambda_Functions.py
gsbot_gsuite/apis/: GCalendar.py  GDrive.py  GSheets.py  GSlides.py  GSuite.py  GSuite_Admin.py
gsbot_gsuite/lambdas/: gdocs.py  lambda_gdocs.py  slides.py
osbot_gsuite/: Deploy.py  __init__.py
osbot_gsuite/analysis/: Incident_Mass_Delete.py
osbot_gsuite/apis/: GCalendar.py  GDoc.py  GDocs.py  GDrive.py  GDrive_Activity.py  GPeople.py  GSheet.py  GSheets.py  GSlides.py  GSuite.py  GSuite_Setup.py  GTypes.py
osbot_gsuite/gsuite/: GSuite.py
osbot_gsuite/lambdas/: calendar.py  gdocs.py  sheets.py  slides.py
osbot_gsuite/testing/: OSBot__GSuite__Testing.py
osbot_gsuite/utils/: Version.py
setup/: test_Create_Code_Build.py
tests/: test_Simple_Test.py  test_gsbot_suite.py  test_osbot_suite.py
tests/apis/: Test_GDrive.py  Test_GSheets.py  Test_GSlides.py  Test_GSuite.py  Test_GSuite_Admin.py  test_GDoc.py  test_GPeople.py  test_GSuite_Setup.py
tests/lambdas/: Test_lambda_calendar.py  Test_lambda_sheets.py  test_lambda_gdocs.py  test_lambda_slides.py
tests__to_wire_up/: pytest.ini
tests__to_wire_up/analysis/: test_Incident_Mass_Delete.py
tests__to_wire_up/apis/: Test_GCalendar.py  Test_GSheets.py  test_GDrive_Activity.py  test_GSuite_Setup.py
(+53 files in other folders)
