[tool.poetry]
name        = "osbot_gsuite"
version     = "v0.3.2"
description = "OWASP GSuite"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/OSBot-GSuite"
repository  = "https://github.com/owasp-sbot/OSBot-GSuite"

[tool.poetry.dependencies]
python                   = "^3.11"
osbot-aws                = "*"
google-api-python-client = "*"
google-auth              = "*"
google-auth-oauthlib     ="*"
google-auth-httplib2     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
